# mkl-service

./: .clang-format  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  AGENTS.md  CHANGELOG.md  CHANGES.rst  LICENSE.txt  README.md  meson.build  meson.options  pyproject.toml  setup.py
.github/: AGENTS.md  CODEOWNERS  copilot-instructions.md
.github/workflows/: build-with-clang.yml  build-with-standard-clang.yml  build_pip.yml  conda-package-cf-osx.yml  conda-package-cf.yml  conda-package.yml  openssf-scorecard.yml  pre-commit-autoupdate.yml  pre-commit.yml
conda-recipe/: AGENTS.md  bld.bat  build.sh  conda_build_config.yaml  meta.yaml
conda-recipe-cf/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
examples/: AGENTS.md  example.py
mkl/: AGENTS.md  __init__.py  _init_helper.py  _mkl_memory.pyx  _mkl_service.pxd  _mkl_service.pyx  _mklinitmodule.c  _py_mkl_service.pyx  _version.py  setup.py
mkl-service/: __init__.py  _mkl_service.pxd  _mkl_service.pyx  setup.py
mkl-service/examples/: example.py
mkl-service/tests/: test_mkl_service.py
mkl/tests/: AGENTS.md  test_mkl_memory.py  test_mkl_service.py
tests/: test_mkl_service.py
